--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,3 +28,23 @@
     </div>
   </div>
 </header>
+<section id="about" class="about">
+  <div class="container">
+    <h2>Кошка и человек</h2>
+    <p class="text">
+      Вот уже несколько миллионов лет кошка является верным, но, в отличии от собак, гордым и
+      самостоятельным спутником человека. Одомашнивание кошки произошло примерно 9500 лет
+      назад. Оно произошло на Ближнем Востоке в районе Плодородного полумесяца, где зародились
+      и развивались древнейшие человеческие цивилизации. Одомашнивание кошки произошло при
+      переходе человека к оседлому образу жизни, с началом развития земледелия, когда появились
+      излишки пищи и появилась потребность в том, чтобы их кто-то охранял от грызунов.
+      Древнейшее архиологическое свидетельство одомашнивания кошки было обнаружено на Кипре, где в ходе
+      археологичексих раскопок было найдено совместное захоронение человека и кошки, которое датируется 7500 годом до н.э.
+      Ранее ученые полагали, что первыми кошек одомашнили египтяне.
+    </p>
+    <div class="images">
+      <img src="assets/images/home/birma_2.jpg" class="images_one" alt="Cat photo one">
+      <img src="assets/images/home/birma_3.jpg" class="images_two" alt="Cat photo two">
+    </div>
+  </div>
+</section>
