Creation of the Breed Page Menu

--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -1,1 +1,20 @@
-<p>breeds works!</p>
+<header class="header" id="header">
+  <div class="container">
+    <div class="menu">
+      <ul class="menu">
+        <li>
+          <a routerLink="/home" routerLinkActive="active-link">Главная</a>
+        </li>
+        <li>
+          <a routerLink="/breeds" routerLinkActive="active-link">Породы</a>
+        </li>
+        <li>
+          <a routerLink="#" routerLinkActive="active-link">Галерея</a>
+        </li>
+        <li>
+          <a routerLink="#" routerLinkActive="active-link">Искусство</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</header>
