--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -16,5 +16,15 @@
         </li>
       </ul>
     </div>
+    <div class="offer">
+      <h1>Все они такие разные</h1>
+      <p>
+        Более 40 признаных пород кошек <br>
+        И свыше 100 существующих
+      </p>
+      <a href="#" class="bth">Вернуться на главную</a>
+    </div>
   </div>
 </header>
+<section id="about" class="about">
+</section>
