--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -27,4 +27,9 @@
   </div>
 </header>
 <section id="about" class="about">
+  <div class="breeds">
+    <p>{{breeds.name}}</p>
+    <div><span>id: </span>{{breeds.id}}</div>
+    <div><span>name: </span>{{breeds.name}}</div>
+  </div>
 </section>
