--- a/src/app/breeds/breeds.component.css
+++ b/src/app/breeds/breeds.component.css
@@ -79,3 +79,38 @@ ul, li {
   background-color: transparent;
   color: #000000;
 }
+
+.breeds {
+  margin: 50px 0 0 0;
+  list-style-type: none;
+  padding: 0;
+}
+
+.breeds li {
+  cursor: pointer;
+  position: relative;
+  left: 0;
+  background-color: #EEEEEE;
+  margin: 8px;
+  padding: 4px 0;
+  border-radius: 4px;
+}
+
+.breeds li:hover {
+  color: #2c3a41;
+  background-color: #e6e6e6;
+  left: 1px;
+}
+
+.breeds .badge {
+  display: inline-block;
+  font-size: small;
+  color: white;
+  padding: 10px 11px 0 11px;
+  background-color: #405061;
+  line-height: 16px;
+  position: relative;
+  height: 28px;
+  margin-right: 12px;
+  border-radius: 4px 0 0 4px;
+}
