--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,1 +1,7 @@
-<p>messages works!</p>
+<div *ngIf="messageService.message.length">
+
+  <h2>Messages</h2>
+  <button class="clear"
+          (click)="messageService.clear()">Очистить сообщения</button>
+  <div *ngFor="let message of messageService.message">{{message}}</div>
+</div>
