--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,18 +3,18 @@
     <div class="body_one">
       <div class="menu">
         <ul>
-          <li>
+          <nav>
             <a href="#">Главная</a>
-          </li>
-          <li>
-            <a href="#">Породы</a>
-          </li>
-          <li>
+          </nav>
+          <nav>
+            <a href="/breeds">Породы</a>
+          </nav>
+          <nav>
             <a href="#">Галерея</a>
-          </li>
-          <li>
+          </nav>
+          <nav>
             <a href="#">Искусство</a>
-          </li>
+          </nav>
         </ul>
       </div>
       <div class="offer">
@@ -23,7 +23,7 @@
           Самые милые и самые величественные <br>
           Вся информация о кошках здесь
         </p>
-        <a href="#" class="bth">Смотреть породы</a>
+        <a href="/breeds" class="bth">Смотреть породы</a>
       </div>
     </div>
   </div>
