Title display bug fixed

--- a/src/app/breed-detail/breed-detail.component.html
+++ b/src/app/breed-detail/breed-detail.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="breed">
 
-  <label for="breed-name">Порода: </label>
-  <input id="breed-name" [(ngModel)]="breed.name" placeholder="name">
+  <label for="breed-title">Порода: </label>
+  <input id="breed-title" [(ngModel)]="breed.title" placeholder="Breed title" />
 </div>
