Added button to go back

--- a/src/app/breed-detail/breed-detail.component.html
+++ b/src/app/breed-detail/breed-detail.component.html
@@ -3,3 +3,4 @@
   <label for="breed-title">Порода: </label>
   <input id="breed-title" [(ngModel)]="breed.title" placeholder="Breed title" />
 </div>
+<button type="button" (click)="goBack()">Вернуться назад</button>
