Added template, imports and styles for the board

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<h2>Породы</h2>
+<div class="breeds-menu">
+  <a *ngFor="let breed of breeds">
+    {{breed.title}}
+  </a>
+</div>
