--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -30,8 +30,8 @@
   <div class="container">
     <ul class="breeds">
       <li *ngFor="let breed of breeds">
-        <a routerLink="/breeds/detail/{{breed.title}}">
-          {{breed.title}}
+        <a routerLink="/detail/{{breed.id}}">
+          <span class="badge">{{breed.id}}</span> {{breed.title}}
         </a>
       </li>
     </ul>
