Editing the output of breeds

--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -27,6 +27,7 @@
   </div>
 </header>
 <section id="about" class="about">
+  <app-breeds-search></app-breeds-search>
   <div class="container">
     <ul class="breeds">
       <li *ngFor="let breed of breeds">
@@ -37,4 +38,4 @@
     </ul>
   </div>
 </section>
-<app-dashboard></app-dashboard>
+
