Reddesign search and adding a button

--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -27,7 +27,9 @@
   </div>
 </header>
 <section id="about" class="about">
-  <app-breeds-search></app-breeds-search>
+  <div class="search>">
+    <app-breeds-search></app-breeds-search>
+  </div>
   <div class="container">
     <ul class="breeds">
       <li *ngFor="let breed of breeds">
