--- a/src/app/breeds/breeds.component.css
+++ b/src/app/breeds/breeds.component.css
@@ -80,6 +80,11 @@ ul, nav {
   color: #000000;
 }
 
+.search {
+  position: relative;
+  margin-left: 100px;
+}
+
 .breeds{
   margin: 50px 0 0 0;
   list-style-type: none;
