--- a/src/app/breeds-search/breeds-search.component.css
+++ b/src/app/breeds-search/breeds-search.component.css
@@ -1,33 +1,60 @@
-label {
-  display: block;
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin-top: 1rem;
-  margin-bottom: .5rem;
+* {box-sizing: border-box;}
 
+form {
+  position: relative;
+  width: 300px;
+  margin-top: 30px;
 }
+
+.search-component {
+  position: relative;
+  margin-left: 300px;
+}
+
 input {
   padding: .5rem;
   width: 100%;
+  height: 42px;
   max-width: 600px;
   box-sizing: border-box;
   display: block;
+  border: 2px solid #7BA7AB;
+  border-radius: 50px;
+  outline: none;
+  background: #FFFAFA;
+  color: #808080;
 }
 
-input:focus {
-  outline: #336699 auto 1px;
+button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 42px;
+  height: 42px;
+  border: none;
+  background: #7BA7AB;
+  border-radius: 0 50px 50px 0;
+  cursor: pointer;
+}
+
+button:before {
+  content: "\f002";
+  font-family: FontAwesome;
+  font-size: 24px;
+  color: #F9F0DA;
 }
 
 li {
   list-style-type: none;
 }
 .search-result li a {
-  border-bottom: 1px solid gray;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
+  border-bottom: 2px solid #7BA7AB;
+  border-left: 2px solid #7BA7AB;
+  border-right: 2px solid #7BA7AB;
+  border-radius: 50px;
   display: inline-block;
   width: 100%;
-  max-width: 600px;
+  max-width: 300px;
   padding: .5rem;
   box-sizing: border-box;
   text-decoration: none;
