--- a/src/app/breeds/breeds.component.css
+++ b/src/app/breeds/breeds.component.css
@@ -89,22 +89,34 @@ ul, nav {
   margin: 50px 0 0 0;
   list-style-type: none;
   padding: 0;
+  display: flex;
+  flex-direction: row; /* направление главной оси */
+  flex-wrap: wrap; /* управление многострочностью */
+  justify-content: space-around; /* выравнивание по главной оси */
+  align-content: flex-start; /* позволяет предопределить выравнивание для всех элементов */
+  align-items: center; /* выравнивание для всех элементов контейнера по поперечной оси */
 }
 
 .breeds li {
   cursor: pointer;
   position: relative;
   left: 0;
-  background-color: #EEEEEE;
   margin: 8px;
   padding: 4px 0;
-  border-radius: 4px;
+
 }
 
 .breeds li:hover {
-  color: #2c3a41;
-  background-color: #e6e6e6;
   left: 1px;
+  border-bottom: 1px solid #000;
+}
+
+.breeds li a {
+  text-decoration: none;
+  color: black;
+  order: 0;
+  flex: 0 1 auto;
+  align-self: auto;
 }
 
 .breeds .badge {
