--- a/src/app/breeds/breeds.component.css
+++ b/src/app/breeds/breeds.component.css
@@ -92,7 +92,7 @@ ul, nav {
   display: flex;
   flex-direction: row; /* направление главной оси */
   flex-wrap: wrap; /* управление многострочностью */
-  justify-content: space-around; /* выравнивание по главной оси */
+  justify-content: space-between; /* выравнивание по главной оси */
   align-content: flex-start; /* позволяет предопределить выравнивание для всех элементов */
   align-items: center; /* выравнивание для всех элементов контейнера по поперечной оси */
 }
@@ -103,20 +103,20 @@ ul, nav {
   left: 0;
   margin: 8px;
   padding: 4px 0;
-
-}
-
-.breeds li:hover {
-  left: 1px;
-  border-bottom: 1px solid #000;
+  align-self: center;
+  order: 0;
+  flex: 0 1 auto;
+  flex-basis: 30%;
 }
 
 .breeds li a {
   text-decoration: none;
   color: black;
-  order: 0;
-  flex: 0 1 auto;
-  align-self: auto;
+}
+
+.breeds li a:hover {
+  left: 1px;
+  border-bottom: 1px solid #000;
 }
 
 .breeds .badge {
