--- a/src/app/breeds/breeds.component.css
+++ b/src/app/breeds/breeds.component.css
@@ -89,15 +89,15 @@ ul, nav {
   margin: 50px 0 0 0;
   list-style-type: none;
   padding: 0;
-  display: flex;
-  flex-direction: row; /* направление главной оси */
-  flex-wrap: wrap; /* управление многострочностью */
-  justify-content: space-between; /* выравнивание по главной оси */
-  align-content: flex-start; /* позволяет предопределить выравнивание для всех элементов */
-  align-items: center; /* выравнивание для всех элементов контейнера по поперечной оси */
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 300px auto 250px;
+
 }
 
 .breeds li {
+  display: grid;
+  place-items: center;
   cursor: pointer;
   position: relative;
   left: 0;
