--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -30,6 +30,9 @@
   <div class="search>">
     <app-breeds-search></app-breeds-search>
   </div>
+  <div class="filte">
+    <app-filter></app-filter>
+  </div>
   <div class="container">
     <ul class="breeds">
       <li *ngFor="let breed of breeds">
