Adding a filter model

--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -1,1 +1,9 @@
-<p>filter works!</p>
+<div id="filter-component" class="filter-component">
+  <div class="filter-button">
+    <button class="all">Все</button>
+    <button class="shorthair">Короткошерстные</button>
+    <button class="longhair">Длинношерстные</button>
+    <button class="bald">Лысые</button>
+    <button class="hypoallergenic ">Гипоаллергенные</button>
+  </div>
+</div>
