--- a/src/app/breeds-search/breeds-search.component.html
+++ b/src/app/breeds-search/breeds-search.component.html
@@ -1,10 +1,12 @@
-<div id="search-component">
-  <label for="search-box">Поиск пород</label>
-  <input #searchBox id="search-box" (input)="search(searchBox.value)" />
+<div id="search-component" class="search-component">
+  <form>
+    <input placeholder="Искать породу" [(ngModel)]="searchTerm" (keyup)="search($event)" />
+    <button type="submit"></button>
+  </form>
 
   <ul class="search-result">
     <li *ngFor="let breed of breeds$ | async">
-      <a routerLink="/detail/{{breed.title}}">
+      <a routerLink="/detail/{{breed.id}}">
         {{breed.title}}
       </a>
     </li>
