--- a/src/app/breeds/breeds.component.css
+++ b/src/app/breeds/breeds.component.css
@@ -85,7 +85,25 @@ ul, nav {
   margin-left: 100px;
 }
 
-.breeds{
+.filter {
+  position: relative;
+  margin-left: 260px;
+  margin-top: 50px;
+}
+
+.filter button {
+  position: relative;
+  font-family: 'Cormorant', serif;
+  margin-left: 40px;
+  display: inline-block;
+  width: 100%;
+  max-width: 200px;
+  background: #EEEEEE;
+  border-radius: 50px;
+  border:  solid #DCDCDC;
+}
+
+.breeds {
   margin: 50px 0 0 0;
   list-style-type: none;
   padding: 0;
