Added link to gallery page

--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -9,7 +9,7 @@
           <a routerLink="/breeds" routerLinkActive="active-link">Породы</a>
         </nav>
         <nav>
-          <a routerLink="#" routerLinkActive="active-link">Галерея</a>
+          <a routerLink="/gallery" routerLinkActive="active-link">Галерея</a>
         </nav>
         <nav>
           <a routerLink="#" routerLinkActive="active-link">Искусство</a>
