--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
             <a href="/breeds">Породы</a>
           </nav>
           <nav>
-            <a href="#">Галерея</a>
+            <a href="/gallery">Галерея</a>
           </nav>
           <nav>
             <a href="#">Искусство</a>
