--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,18 @@
 <header class="header" id="header">
   <div class="container">
-
+    <div class="menu">
+      <nav>
+        <a routerLink="/home" routerLinkActive="active-link">Главная</a>
+      </nav>
+      <nav>
+        <a routerLink="/breeds" routerLinkActive="active-link">Породы</a>
+      </nav>
+      <nav>
+        <a routerLink="/gallery" routerLinkActive="active-link">Галерея</a>
+      </nav>
+      <nav>
+        <a routerLink="#" routerLinkActive="active-link">Искусство</a>
+      </nav>
+    </div>
   </div>
 </header>
