--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -27,8 +27,7 @@ ul, nav {
   color: white;
   font-size: 30px;
   line-height: 44px;
-  left: 20px;
-  top: 17px;
+  left: -20px;
 }
 
 .menu nav {
@@ -37,4 +36,24 @@ ul, nav {
 
 .menu nav a:hover {
   border-bottom: 1px solid #ffffff;
+}
+
+.offer h1 {
+  position: absolute;
+  margin-top: 301px;
+  font-size: 50px;
+  line-height: 73px;
+  left: 316px;
+  font-weight: bolder;
+  color: white;
+}
+
+.offer p {
+  position: absolute;
+  margin-top: 385px;
+  font-size: 25px;
+  line-height: 40px;
+  left: 316px;
+  font-weight: normal;
+  color: white;
 }
