--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -18,7 +18,9 @@
     </div>
     <div class="offer">
       <h1>Красота и изящество</h1>
-      <p>Кошки - одни из самых фотогеничных созданий в мире</p>
+      <p>Кошки - одни из самых фотогеничных <br>
+        созданий в мире</p>
+      <a href="#" class="bth">Смотреть породы</a>
     </div>
   </div>
 </header>
