--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -57,3 +57,27 @@ ul, nav {
   font-weight: normal;
   color: white;
 }
+
+.bth {
+  color: #ffffff;
+  font-size: 20px;
+  display: block;
+  text-align: center;
+  letter-spacing: 0.1em;
+  padding: 17px 47px;
+  transition: all 0.5s ease;
+  border:  solid #000000;
+  border-radius: 57px;
+  background: #000000;
+  position: absolute;
+  width: 240px;
+  height: 35px;
+  margin-top: 495px;
+  left: 316px;
+  text-decoration: none;
+}
+
+.bth:hover {
+  background-color: transparent;
+  color: #000000;
+}
