Added page text

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -24,3 +24,14 @@
     </div>
   </div>
 </header>
+<section id="about" class="about">
+  <div class="info">
+    <h2>Фотографии</h2>
+    <p class="text">
+      В данной категории представлены одни из самых красивых фотографий кошек. Хотя... Разве могут быть фотографии
+      кошек некрасивыми? <br>
+      Надеемся, что Вы получите эстетическое удовлетворение от этих прекрасных созданий! <br>
+      Приятного просмотра!
+    </p>
+  </div>
+</section>
