--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -25,13 +25,15 @@
   </div>
 </header>
 <section id="about" class="about">
-  <div class="info">
+  <div class="container">
     <h2>Фотографии</h2>
-    <p class="text">
+    <p>
       В данной категории представлены одни из самых красивых фотографий кошек. Хотя... Разве могут быть фотографии
       кошек некрасивыми? <br>
       Надеемся, что Вы получите эстетическое удовлетворение от этих прекрасных созданий! <br>
       Приятного просмотра!
     </p>
+    <div class="line"></div>
   </div>
+
 </section>
