--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -34,6 +34,9 @@
       Приятного просмотра!
     </p>
     <div class="line"></div>
+    <div class="gallery" *ngFor="let photo of gallery">
+      <img [src]="photo.image" [alt]="photo.alt">
+    </div>
   </div>
 
 </section>
