--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -34,8 +34,22 @@
       Приятного просмотра!
     </p>
     <div class="line"></div>
-    <div class="gallery" *ngFor="let photo of gallery">
-      <img [src]="photo.image" [alt]="photo.alt">
+    <div class="gallery">
+      <figure class="gallery_item gallery_item_1">
+        <img src="../../assets/images/gallery/images_1.jpg">
+      </figure>
+      <figure class="gallery_item gallery_item_2">
+        <img src="../../assets/images/gallery/images_2.jpg">
+      </figure>
+      <figure class="gallery_item gallery_item_4">
+        <img src="../../assets/images/gallery/images_4.jpg">
+      </figure>
+      <figure class="gallery_item gallery_item_3">
+        <img src="../../assets/images/gallery/images_3.jpg">
+      </figure>
+      <figure class="gallery_item gallery_item_5">
+        <img src="../../assets/images/gallery/images_5.jpg">
+      </figure>
     </div>
   </div>
 
