--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -111,50 +111,22 @@ h2 {
 }
 
 .gallery {
+  margin: 50px 0 0 0;
   display: grid;
-  column-gap: 50px;
-  row-gap: 60px;
-  margin-top: 59px;
-  grid-template-columns: 444px 230px 394px;
-  grid-auto-rows: 252px 163px;
+  gap: 49px;
+  grid-template-columns: 447px 230px 394px;
+  grid-template-rows: 252px 550px 558px;
 }
 
-.photo {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.gallery_item_1 {
-  grid-column-start: 1;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
+.gallery figure {
+  display: grid;
 }
 
 .gallery_item_2 {
-  grid-column-start: 1;
-  grid-column-end: 3;
   grid-row-start: 2;
-  grid-row-end: 3;
-}
-
-.gallery_item_4 {
-  grid-column-start: 4;
-  grid-column-end: 2;
-  grid-row-start: 1;
-  grid-row-end: 4;
-}
-
-.gallery_item_3 {
-  grid-column-start: 3;
-  grid-row-start: 1;
-  grid-row-end: 3;
 }
 
 .gallery_item_5 {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  grid-row-end: 239;
 }
+
