--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -111,22 +111,63 @@ h2 {
 }
 
 .gallery {
-  margin: 50px 0 0 0;
   display: grid;
-  gap: 49px;
-  grid-template-columns: 447px 230px 394px;
-  grid-template-rows: 252px 550px 558px;
+  grid-template-columns: repeat(3, 300px);
+  grid-template-rows: repeat(5,300px);g
+  width: 100%;
+  margin-top: 50px;
 }
 
-.gallery figure {
+.image {
+  margin-right: 0.5rem;
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+
+  filter: drop-shadow(1px 2px 3px black);
+}
+
+.gallery .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* заполненность объектом контейнера */
+  transition-duration: 0.55s; /* время анимации */
+}
+
+.gallery .image span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  opacity: 0; /* непрозрачность элемента */
+  font-size: 3rem;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  pointer-events: none;
+}
+
+.gallery .image:hover {
+  filter: brightness(0.9) drop-shadow(2px 4px 6px black); }
+
+.gallery .image img:hover {
+  transform: scale(1.1) !important;
+  transition-duration: 3s;
+}
+
+.gallery .image span:hover {
+  opacity: 1;
+}
+
+.container_gallery {
+  width: 66vw;
+  min-width: 300px;
+  max-width: 900px;
+  margin: 0 auto;
   display: grid;
+  align-items: center;
 }
-
-.gallery_item_2 {
-  grid-row-start: 2;
-}
-
-.gallery_item_5 {
-  grid-row-end: 239;
-}
-
