--- a/src/app/gallery-carousel/gallery-carousel.component.html
+++ b/src/app/gallery-carousel/gallery-carousel.component.html
@@ -1,5 +1,12 @@
-<p-gallery [value]="images">
-  <ng-template pTemplate="photo" let-photo>
-    <img [src]="photo.image" [alt]="photo.alt" />
-  </ng-template>
-</p-gallery>
+<div class="carousel" (click)="close()">
+  <div class="carousel-image" (click)="onEvent($event)">
+    <img [@slide-in]="animState" (@slide-in.done)="animDone()" [src]="images[animImage].image" [alt]="images[animImage].alt">
+    <div class="carousel-button">
+      <span tabindex="1" (keyup.enter)="previous()" (click)="previous()">&lt;</span>
+      <span></span>
+      <span tabindex="2" (keyup.enter)="next()" (click)="next()">&gt;</span>
+    </div>
+  </div>
+  <span class="carousel-close" tabindex="3" (click)="close()">close</span>
+</div>
+
