--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -124,16 +124,17 @@ h2 {
   overflow: hidden;
   position: relative;
   cursor: pointer;
+  filter: drop-shadow(1px 2px 3px #000000);
 }
 
-.gallery .image img {
+.image img {
   width: 100%;
   height: 100%;
   object-fit: cover; /* заполненность объектом контейнера */
   transition-duration: 0.55s; /* время анимации */
 }
 
-.gallery .image span {
+span {
   position: absolute;
   left: 0;
   top: 0;
@@ -148,15 +149,16 @@ h2 {
   pointer-events: none;
 }
 
-.gallery .image:hover {
+
+.image:hover {
   filter: brightness(0.9) drop-shadow(2px 4px 6px black); }
 
-.gallery .image img:hover {
+.image:hover img {
   transform: scale(1.1) !important;
   transition-duration: 3s;
 }
 
-.gallery .image span:hover {
+.image:hover span {
   opacity: 1;
 }
 
