Adding an Art Page Route

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -12,7 +12,7 @@
           <a routerLink="/gallery" routerLinkActive="active-link">Галерея</a>
         </nav>
         <nav>
-          <a routerLink="/carousel" routerLinkActive="active-link">Искусство</a>
+          <a routerLink="/art" routerLinkActive="active-link">Искусство</a>
         </nav>
       </ul>
     </div>
