--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             <a href="/gallery">Галерея</a>
           </nav>
           <nav>
-            <a href="#">Искусство</a>
+            <a href="/art">Искусство</a>
           </nav>
         </ul>
       </div>
