--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -12,7 +12,7 @@
           <a routerLink="/gallery" routerLinkActive="active-link">Галерея</a>
         </nav>
         <nav>
-          <a routerLink="#" routerLinkActive="active-link">Искусство</a>
+          <a routerLink="/art" routerLinkActive="active-link">Искусство</a>
         </nav>
       </ul>
     </div>
