--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,1 +1,20 @@
-<p>art works!</p>
+<header id="header" class="header">
+  <div class="container">
+    <div class="menu">
+      <ul>
+        <nav>
+          <a routerLink="/home" routerLinkActive="active-link">Главная</a>
+        </nav>
+        <nav>
+          <a routerLink="/breeds" routerLinkActive="active-link">Породы</a>
+        </nav>
+        <nav>
+          <a routerLink="/gallery" routerLinkActive="active-link">Галерея</a>
+        </nav>
+        <nav>
+          <a routerLink="/art" routerLinkActive="active-link">Искусство</a>
+        </nav>
+      </ul>
+    </div>
+  </div>
+</header>
