Adding Menu Styles

--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -1,7 +1,7 @@
 <header id="header" class="header">
   <div class="container">
     <div class="menu">
-      <ul>
+      <ul class="menu">
         <nav>
           <a routerLink="/home" routerLinkActive="active-link">Главная</a>
         </nav>
