Adding Master Information

--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -16,5 +16,11 @@
         </nav>
       </ul>
     </div>
+    <div class="offer">
+      <h1>Кошки как искусство</h1>
+      <p> Многие деятели искусства вдохновлялись своими пушистыми друзьями,
+      посвящали им песни, писали в их честь картины, вдохновлялись на новые свершения</p>
+      <a routerLink="/home" routerLinkActive="active-link">Вернуться на главную</a>
+    </div>
   </div>
 </header>
