--- a/src/app/art/art.component.css
+++ b/src/app/art/art.component.css
@@ -36,3 +36,48 @@ ul, nav {
 .menu nav a:hover {
   border-bottom: 1px solid #ffffff;
 }
+
+.offer h1 {
+  position: absolute;
+  margin-top: 301px;
+  font-size: 50px;
+  line-height: 73px;
+  left: 370px;
+  font-weight: bolder;
+  color: white;
+}
+
+.offer p {
+  position: absolute;
+  margin-top: 385px;
+  font-size: 20px;
+  width: 561px;
+  line-height: 40px;
+  left: 370px;
+  font-weight: normal;
+  color: white;
+}
+
+.bth {
+  color: #ffffff;
+  font-size: 16px;
+  display: block;
+  text-align: center;
+  letter-spacing: 0.1em;
+  padding: 17px 47px;
+  transition: all 0.5s ease;
+  border:  solid #000000;
+  border-radius: 57px;
+  background: #000000;
+  position: absolute;
+  width: 340px;
+  height: 70px;
+  margin-top: 580px;
+  left: 370px;
+  text-decoration: none;
+}
+
+.bth:hover {
+  background-color: transparent;
+  color: #000000;
+}
