Adding an article introduction

--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -24,3 +24,12 @@
     </div>
   </div>
 </header>
+<section id="about" class="about">
+  <div class="container">
+    <h2>Кошки в искусстве</h2>
+    <p>Когда мы говорим о кошках, то представляем гордых, грациозных и нежных созданий.
+    Они занимают определенное место в человеческой культуре. В жизни человека кошка
+    прошла путь от божественного существа до обычного жителя городской среды, но все
+    еще она привязывает к себе людей, вызывает восхищение и умиление.</p>
+  </div>
+</section>
