Adding article text

--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -31,5 +31,80 @@
     Они занимают определенное место в человеческой культуре. В жизни человека кошка
     прошла путь от божественного существа до обычного жителя городской среды, но все
     еще она привязывает к себе людей, вызывает восхищение и умиление.</p>
+    <h3>Кошки в Древнем Египте</h3>
+    <p>В древнем Египте кошка была символом плодородия и солнца. Также египетская
+    мифология включала в себя большое количество представителей кошачьих. Например,
+    Сехмет, Тефнут, Мафдет и Шесемтет отождествлялись со львицами. Множество божеств
+    могли изображаться в виде сфинкса. В "Книге мертвых" (сборник египетских гимнов и релизиозных текстов),
+    бог солнца Ра выступает в виде рыжего кота, ежедневно повергающего змея Апопа. Баст же является богиней
+    с головой кошки, изначально же она считалась оберегающей воинственной львицей. Позже ее образ стал
+    отождествляться с прирученными кошками, лояльными, но все еще дикими. <br> В одном из храмов в Египте была
+    скульптура кота, которая олицетворяла бога Ра. В зависимости от времени суток глаза статуи то
+    расширялись, то сужались, а изо рта статуи каждый час текла вода. <br> Каменные изваяния следовали за фараонами
+      в загробный мир и внимательно их охраняли, однако главной миссией кошке было истребление грызунов. Благодаря
+      своей ловкости и изяществу эти маленькие хищники были возведены в ранг богов, а потому их изображения
+      обладали магической силой. <br> В Древнем Египте кошки были повсюду: их вырезали из камня, рисовали на посуде
+      и стенах погребальных камер, лепили из глины. Они считались священными, а за убийство этого животного полагалась
+      смертная казнь. Также кошек мумифицировали и хоронили на специальных кладбищах. <br> Благодаря египтянам кошки
+      попали в Европу, где долгое время считались экзотическими животным. Только в эпоху римских императоров их
+      стали использовать в практических целях как охотников. <br> В римской и греческой живописи изображения кошек
+      можно было встретить на монетах, амфорах, мозаиках и тд. Но они не считались божественными, кошки были лишь
+      союзниками в борьбе с грызунами.</p>
+    <h3>Другой взгляд на кошек</h3>
+    <p>В Средние века, когда инквизиция объявила войну неверию, кошки попали в немилость. Они были низведены на
+    несколько столетий в подвал человеческих мыслей, а значит и искусства. Была и другая причина этого момента:
+      любая деталь средневековой живописи должна была иметь религиозный характер, каждая деталь имела каноническое
+      значение. На протяжении веков художники соблюдалт правила, установленные церковью. В иконографии кошки
+      олицетворяли как лень и похоть, так и обман и предательство. На некоторых средневековых изображениях кошки
+      изображались на сценах грехопадения Евы в Эдемском саду. <br> Кошки также стали предметом суеверного страха,
+      так как они вели ночной образ жизни. Считалось, что черт часто маскируется под черную кошку, поэтому
+      кошек часто изображали сидящими на плече их хозяев-ведьм. <br> Негативное отношение к кошкам продолжилось
+      и в эпоху Возрождения. Ярким примером является "Тайная вечеря" Доменико Гирландайо (1449 - 1494), где
+      художник изобразил кота, сидящего за спиной Иуды, который предал Христа, что символизирует предательство в
+      этой истории. <br> Изображения кошек также стали подразумевать похоть. Например, в "Посящение пряхи" Исраэля ван
+      Мекенема (1495 - 1503) можно увидеть кошку, отдыхающую на полу комнаты, где молодая женщина работает за
+      прялкой, а рядом с ней сидит мужчина. Считается,что на это картине изображена любовь на продажу, а присутсвтие
+      кота указывает на цель визита гостя. <br> Художники эпохи Возрождения долгое время не отходили от канонических
+      символов, что отлично отражается в триптихе "Сад земных наслаждений" Иеронима Босха (1450 - 1516). На переднем
+      плане, возле Древа познания, Бог знакомит Еву с Адамом. Рядом мы видим яму с темной водой и кота с мышью в зубах,
+      что в данном контексте символизирует дьявола и жестокость.
+    </p>
+    <h3>После</h3>
+    <p>Постепенно ситуация менялась: религиозные предрассудки уходи в прошлое, жизнь становилась комфортнее, а кошки
+    не представляли угрозы, даже наоборот - часто они становились хорошей компанией. <br> Для мастера эпохи Возрождения
+    Леонардо да Винчи кошки стали объектом научных исследований. "Самое маленькое животное из семейства кошачьих - это
+    шедевр", - писал Леонардо, заполняя страницы своего альбома зарисовками этих животных, моющихся, играющих или
+    охотящихся на мышей и птиц. <br> Кошки завоевали место не только в доме, но и в живописи, хоть пока еще и не являлись
+    центром композиции. Они часто были героями домашних сцен таких худлжников как Ганс фон Кульмбах (1476 - 1522), Ян
+    Корнелись Вермейен (1500 - 1559), Отто ван Вин (1556 - 1629), Жан-Батист Перронно (1715 - 1783), Жан-Батист Симеон
+    Шарден (1699 - 1779). <br> В портретах дам кошки подчеркивали нежность и жентсвенность хозяек, а натюрморты
+    наполнялись некой интригой и действием при помощи усатых существ. Также кошек часто рисовали рядом с детьми. <br>
+    Часто кошек изображали крадущими еду, но делалось это с юмором и с восхищением кошачьей ловкости и сообразительности.
+    <br> К XVII-XVIII векам кошки незаметно проникли в жизнь человека и навсегда поселились в ней. <br> К середине XVII
+    века кошки стали частью семьи, а их образы часто служили метафорой метеринства, уютного дома и вольностей. <br>
+    Кардинал Ришелье держал десятки кошек и даже оставил в завещании деньги, чтобы о них позаботились после его смерти.
+    В XVIII веке кошки с торжеством ходили по салонам знатных дам, которые заказывали медальерам портреты своих питомцев,
+    а их прах хранился в изысканных урнах. Антуа Ватто (1684-1721) и Жан-Оноре Фрагонар (1732-1806) изображали их в
+    пасторальных сценах и дамских будуарах. <br> В Англии кошки уже были на страницах романов, стихов и картин как
+    непременный атрибут счастливой семейной жизни. <br> Знаменитый английский художник-портретист Джордж Стаббс (1724-1806)
+    на своем портрете "Годольфина Аравийского" изобразил дружбу животных: дружбу между лошадью и кошкой. <br> Один из
+    самых известных японских любителей кошек Утагава Куниёси (1798 - 1861) и его гравюра на дереве "Кошки, предложенные
+    как пятьдесят три стоянки Токайдо" также являются ярким примером этого. Это пародия на известную серию гравюр на
+    дереве "Пятьдесят три станции Токайдо". Усатые милашки на этой густо заполненной картинке имеют каламбурные имена,
+    соответсвующие станциям. <br> В XIX веке художники уже не придерживались традиционной символики и стали изображать
+    животных как дополнительное средство для выражения эмоций, подчеркивая настроение или личности персонажей. <br>
+    Но, все же, темное прошлое кошек не было забыто. Эдуар Мане (1832 - 1883) упомянул их злобный характер в своей картине
+    "Олимпия". Рисуя обнаженную натуру, у ног которой был черный котенок, художник передал метафору "женщины-кошки",
+    навеянную творчеством своего друга Шарля Бодлера, который в то время переживал тяжелый роман с обманчивой дамой.
+    Шипящий котенок - классический атрибут в образах ведьм, являющийся признаком дурных чувств и переменчивой женской
+    натуры. <br> Кошка, спящая средь бела дня в "Таитянцах" Поля Гогена, - это блаженство. На полотнах Ренуара можно
+    обнаружить четкие "отпечатки кошачьих лап": его "Женщина с кошкой" словно олицетворяет все нежное и пушистое в кшачьей
+    природе. <br> Еще одна известная работа, уже ставшая симовлом Парижа - ее можно увидеть на футболках, сумках, календарях...
+    Кот на афише кабаре Теофиля Стейнлена (1896), французского художника-графика, автора альбома фоторепортажа под
+    названием "Кошки" - символ ночной жизни. <br> В XX веке кошки уже  не были простыми участниками жанровых сценок, их
+    изображения стали маркетинговым шагом, а художники стали часто наделять их человеческими чертями. Например, на картине
+    Марка Шагала "Париж из окна" у рыжего кота голова человека. А Пабло Пикассо в своей картине "Кошка, ловящая птицу"
+    передал хищную природу животного, что было олицетворением возникающей в то время фашисткой угрозы. <br> Также
+    художниками, котрые любили кошек, являлись Мориц Корнлись Эшер (1898 - 1972) и Энди Уорхол (1928 - 1987).</p>
   </div>
 </section>
