Adding a link to the home page

--- a/src/app/breeds/breeds.component.html
+++ b/src/app/breeds/breeds.component.html
@@ -22,7 +22,7 @@
         Более 40 признаных пород кошек <br>
         И свыше 100 существующих
       </p>
-      <a href="#" class="bth">Вернуться на главную</a>
+      <a href="/home" class="bth">Вернуться на главную</a>
     </div>
   </div>
 </header>
