Adding a Link to the Breeds Page

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -20,7 +20,7 @@
       <h1>Красота и изящество</h1>
       <p>Кошки - одни из самых фотогеничных <br>
         созданий в мире</p>
-      <a href="#" class="bth">Смотреть породы</a>
+      <a routerLink="/breeds" routerLinkActive="active-link" class="bth">Смотреть породы</a>
     </div>
   </div>
 </header>
