Displaying images of the part of the article about Egypt

--- a/src/app/art/art.component.html
+++ b/src/app/art/art.component.html
@@ -50,6 +50,9 @@
       стали использовать в практических целях как охотников. <br> В римской и греческой живописи изображения кошек
       можно было встретить на монетах, амфорах, мозаиках и тд. Но они не считались божественными, кошки были лишь
       союзниками в борьбе с грызунами.</p>
+    <div class="carousel" *ngFor="let photo of images_egypt">
+      <img [src]="photo.image" [alt]="photo.alt">
+    </div>
     <h3>Другой взгляд на кошек</h3>
     <p>В Средние века, когда инквизиция объявила войну неверию, кошки попали в немилость. Они были низведены на
     несколько столетий в подвал человеческих мыслей, а значит и искусства. Была и другая причина этого момента:
